2006-09-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactView.m ([UIxContactView
	-_urlOfType:aType]): don't manage non-mailto urls through
	javascript, let the user decide what's best for him.

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-newAction]): transfer all the query parameters by using the
	"asURLParameters"'s result string from [self queryParameters].

	* UI/Contacts/UIxContactEditor.m ([UIxContactEditor
	-initSnapshot]): retrieve "contactEmail" and "contactFN" from the
	query parameters and put their values (if any) into the snapshot.

	* UI/Contacts/UIxContactView.m ([UIxContactView -note]): convert
	carriage-returns to "<br />".
	([UIxContactView -workCompany]): explicitly initialize company to
	nil if org is nil or empty.

	* UI/WebServerResources/UIxContactEditor.js: updated validation
	code after we added and renamed some fields.

	* UI/WebServerResources/ContactsUI.js: added code to cache contact
	cards and to handle card updates.

2006-09-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactView.m ([UIxContactView -hasOtherInfos]):
	test the length of the returned string since they will never be
	nil.

	* UI/Contacts/UIxContactEditor.m ([UIxContactEditor -saveAction]):
	return self if the process went successful, returns an exception
	otherwise (and only otherwise...).

	* OGoContentStore/OCSContactFieldExtractor.m
	([OCSContactFieldExtractor -extractQuickFieldsFromVCard:_vCard]):
	adapted method to the new VCard api. Since the cards are stored in
	vcard format, we no longer deal with a dictionary but with a
	NGVCard object...

2006-09-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactView.m ([UIxContactView -preferredEmail]):
	return a string with a "mailto" url.
	([UIxContactView -_urlOfType:aType]): generic method to return a
	url string with a html anchor pointing to it.

	* UI/Contacts/UIxContactEditor.[hm]: UIxContactEditorBase renamed